<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewShoppingList">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/NewShoppingList"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="@font/aclonica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/listName"
        android:layout_width="240dp"
        android:layout_height="42dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EnterShoppingListName"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listName" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="410dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:background="#6E85B8BE"
                android:text="@string/selectRecipe"
                app:fontFamily="@font/aclonica" />

            <LinearLayout
                android:id="@+id/selectRecipeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/newRecipeButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:onClick="addRecipeComponent"
                    android:text="@string/AddRecipe" />
            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:background="#6E85B8BE"
                android:text="@string/AddIndividualItems"
                app:fontFamily="@font/aclonica" />

            <LinearLayout
                android:id="@+id/individualItemsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">


                <EditText
                    android:id="@+id/itemNameText"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/ItemName"
                    android:inputType="textShortMessage"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/quantityText"
                    android:layout_width="83dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/Quantity"
                    android:inputType="number|numberDecimal" />

                <Spinner
                    android:id="@+id/typeSpinner"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:entries="@array/unitItems"
                    android:gravity="end"
                    android:spinnerMode="dialog" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="54dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="addRow"
                    android:text="@string/plus" />
            </LinearLayout>

            <TableLayout
                android:id="@+id/itemTable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:visibility="gone">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ItemName"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Quantity"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Type"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5" />

                </TableRow>
            </TableLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/EnterAComment"
                android:inputType="textMultiLine" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button4"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:onClick="createNewShoppingList"
        android:text="@string/CreateNewShoppingList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>