<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRecipe">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/NewRecipe"
        android:textSize="30sp"
        app:fontFamily="@font/aclonica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="360dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="#6E85B8BE"
                    android:text="@string/NameOfRecipe"
                    app:fontFamily="@font/aclonica" />

                <EditText
                    android:id="@+id/recName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="360dp"
                android:layout_height="42dp"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#6E85B8BE"
                    android:text="@string/NumberOfPeople"
                    app:fontFamily="@font/aclonica" />

                <TextView
                    android:id="@+id/seekBarValuePeople"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0"
                    android:gravity="end"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/seekBarPeople"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:max="20"
                    android:progress="1" />

            </LinearLayout>

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:background="#6E85B8BE"
                android:text="@string/AddIngredients"
                app:fontFamily="@font/aclonica" />

            <LinearLayout
                android:id="@+id/individualItemsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp">


                <EditText
                    android:id="@+id/itemNameText"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/ItemName"
                    android:inputType="textShortMessage"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/quantityText"
                    android:layout_width="83dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/Quantity"
                    android:inputType="number|numberDecimal" />

                <Spinner
                    android:id="@+id/typeSpinner"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:entries="@array/unitItems"
                    android:gravity="end"
                    android:spinnerMode="dialog" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="54dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="addRow"
                    android:text="@string/plus" />
            </LinearLayout>

            <TableLayout
                android:id="@+id/itemTable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:visibility="gone">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ItemName"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Quantity"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Type"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5" />

                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="44dp"
                android:background="#6E85B8BE"
                android:gravity="center"
                android:text="@string/Method"
                android:textSize="14sp"
                android:visibility="visible"
                app:fontFamily="@font/aclonica" />

            <EditText
                android:id="@+id/recMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:visibility="visible" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button13"
        android:layout_width="264dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="createNewRecipe"
        android:text="@string/NewRecipeTo"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>