<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:src="@drawable/buttonmap1"
        app:layout_constraintBottom_toBottomOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button6"
        app:layout_constraintVertical_bias="0.497" />

    <Button
        android:id="@+id/button"
        android:layout_width="185dp"
        android:layout_height="215dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:background="#FF9800"
        android:onClick="goToNewRecipe"
        android:text="@string/NewRecipe"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="185dp"
        android:layout_height="215dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#00BCD4"
        android:onClick="goToNewShoppingList"
        android:text="@string/NewShoppingList"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="185dp"
        android:layout_height="215dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="#4CAF50"
        android:onClick="goToMyRecipes"
        android:text="@string/MyRecipes"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="185dp"
        android:layout_height="215dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#E91E63"
        android:onClick="goToMyShoppingLists"
        android:text="@string/MyShoppingLists"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="#003F51B5"
        android:ellipsize="none"
        android:onClick="goToMashup"
        android:padding="8dp"
        android:textColor="#FFFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>